--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,15 @@ latex:
 bibtex_bibfiles:
   - references.bib
 
+launch_buttons:
+  notebook_interface : "classic" # The interface interactive links will activate ["classic", "jupyterlab"]
+  binderhub_url      : "https://mybinder.org"
+  thebe              : true
+  
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/executablebooks/jupyter-book  # Online location of your book
-  path_to_book: docs  # Optional path to your book, relative to the repository root
+  url: https://github.com/ggeorg02/BAIT580  # Online location of your book
+  path_to_book: ""  # Optional path to your book, relative to the repository root
   branch: master  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
